2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Define PACKAGE_AUTHORS in configure.ac.

	* configure.ac (PACKAGE_AUTHORS): New variable.  Define it both as
	a C/C++ preprocessor symbol (using AC_DEFINE_UNQUOTED) and as an
	Autoconf output variable (via AC_SUBST).

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Stop generating milena/mln/version.hh in the build tree with configure.

	* configure.ac: No longer configure milena/mln/version.hh, as
	milena/Makefile now generates it the source tree instead.

2013-08-30  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Untabify.

2011-07-11  Roland Levillain  <roland@lrde.epita.fr>

	Remove buggy symbol definitions.

	* configure.ac: No longer define OLN_PACKAGE_NAME,
	OLN_PACKAGE_BUGREPORT, OLN_PACKAGE_STRING and OLN_PACKAGE_VERSION
	using AC_DEFINE_UNQUOTED.

2010-08-20  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Configure milena/apps/generic-skel/Makefile.

2010-06-24  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Configure milena/tests/io/vtk/Makefile.

2010-07-15  Roland Levillain  <roland@lrde.epita.fr>

	Configure tests in mesh-segm-skel apps.

	* configure.ac: Configure
	milena/apps/mesh-segm-skel/test-mesh-complex-pinv-curv-segm and
	milena/apps/mesh-segm-skel/test-mesh-complex-pinv-curv-skel.

2010-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Configure milena/apps/mesh-segm-skel/test-mesh-complex-max-curv-skel.

	* configure.ac: Here.

2010-05-11  Roland Levillain  <roland@lrde.epita.fr>

	Configure milena/apps/mesh-segm-skel/test-mesh-complex-max-curv-extrema.

	* configure.ac: Here.

2013-08-26  Roland Levillain  <roland@lrde.epita.fr>

	Improve the generation of Doxyfiles in Olena.

	* doc/Makefile.am (edit)
	($(srcdir)/user-refman.stamp):
	Use `[@]' instead of `\@' for portability reasons.
	(ID): New (empty).
	($(DOXYFILE_USER)): Do not depend on $Id$ from ChangeLog.
	* doc/Doxyfile.in (PROJECT_NUMBER): Reintegrate @ID@ to the